--- a/interpolate_medians.ipynb
+++ b/interpolate_medians.ipynb
@@ -4,12 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Code for interpolating the median age from grouped age category data, via https://github.com/datadesk/census-data-aggregator:"
+    "### Code for interpolating the median age from grouped age category data, written by the [Los Angeles Times Data Desk](https://github.com/datadesk). \n",
+    "\n",
+    "### For more information, see: https://github.com/datadesk/census-data-aggregator"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,16 +89,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dc = pd.read_csv('dc_age18.csv')"
+    "dc = pd.read_csv('dc_age2018.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
