--- a/interpolate_medians.ipynb
+++ b/interpolate_medians.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Code for interpolating the median age from grouped age category data, written by the [Los Angeles Times Data Desk](https://github.com/datadesk). \n",
+    "### Experiemental code for interpolating the median age from grouped age category data, via the [Los Angeles Times Data Desk](https://github.com/datadesk). \n",
     "\n",
     "### For more information, see: https://github.com/datadesk/census-data-aggregator"
    ]
